feat: :sparkles: End 6th section Input, Output & graphs(charts)

--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,28 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona 
+            [title]="'Ventas'"
+            [labels]="['maincra', 'fornite', 'lig of leyends']"
+            [data]="[100, 90, 450]"
+            [backgroundColor]="['#f44336', '#ffd966', '#16537e']">
+        </app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona 
+            [title]="'Compras'">
+        </app-dona>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona 
+            [title]="'Cambios'">
+        </app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona 
+            [title]="'Beneficios'">
+        </app-dona>
+    </div>
+</div>
