--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -6,16 +6,17 @@
         <div class="container-fluid">
             <!-- breadcrumb -->
             <app-breadcrumbs></app-breadcrumbs>
-
-            <div class="row">
+            <router-outlet></router-outlet>
+            
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <router-outlet></router-outlet>
+                            
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- ============================================================== -->
