--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,40 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Striped Progress bar</h4>
+                <div class="progress-bar bg-primary progress-bar-striped active" 
+                    style="height:5px;"
+                    [style.width]="getPercent1"
+                    role="progressbar">
+                </div>
+                <div class="progress-bar bg-info progress-bar-striped active" 
+                    style="height:5px;"
+                    [style.width]="getPercent2"
+                    role="progressbar">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (outputValue)="progress1 = $event" [valor]="progress1"></app-incrementador>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador 
+                    (outputValue)="progress2 = $event" 
+                    [valor]="progress2"
+                    [btnClass]="'btn-info'">
+                </app-incrementador>
+            </div>
+        </div>
+    </div>
+</div>
