--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="form-group m-b-0">
-                    <div class="col-sm-12 text-center">
+                    <div class="col-sm-12 text-center mt-4">
                         Don't have an account? <a [routerLink]="['/register']" class="text-primary m-l-5"><b>Sign Up</b></a>
                     </div>
                 </div>
