--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,32 @@
   width: 200px;
   height: 200px;
 }
+
+.w100 {
+  width: 100px;
+}
+
+.w140 {
+  width: 140px;
+}
+
+.avatar {
+  border: 1px solid #ECECEC;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+}
+
+.hide {
+  display: none;
+}
+
+.backgrond-modal-image {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 9999;
+}
