--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -47,9 +47,11 @@
                 <li class="nav-item hidden-xs-down search-box"> <a
                         class="nav-link hidden-sm-down waves-effect waves-dark" href="javascript:void(0)"><i
                             class="ti-search"></i></a>
-                    <form class="app-search">
-                        <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i
-                                class="ti-close"></i></a>
+                    <form class="app-search" (submit)="search( txtTerm.value )">
+                        <input type="text" class="form-control" placeholder="Search user, hospital or doctor..." #txtTerm> 
+                        <a class="srh-btn">
+                            <i class="ti-close"></i>
+                        </a>
                     </form>
                 </li>
                 <!-- ============================================================== -->
@@ -206,7 +208,7 @@
                                     <div class="u-text">
                                         <h4>{{ user.name }}</h4>
                                         <p class="text-muted">{{ user.email | slice:0:20 }}{{ (user.email.length > 20) ? '...' : '' }}</p>
-                                        <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+                                        <a [routerLink]="['./profile']" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
                                     </div>
                                 </div>
                             </li>
