--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,1 +1,102 @@
-<p>search works!</p>
+<div class="row animated fadeIn fast">
+    <div class="col-4">
+        <div class="card">
+            <div class="card-body">
+                <h3>Users</h3>
+
+                <div class="alert alert-info" *ngIf="users.length === 0">
+                    <p class="mb-0">
+                        There are no users with this term
+                    </p>
+                </div>
+
+                <div class="table-responsive" *ngIf="users.length > 0">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Avatar</th>
+                                <th>Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="animated fadeIn fast" *ngFor="let user of users">
+                                <td>
+                                    <img class="w75" [src]="user.image! | image:'users'" [alt]="user.name">
+                                </td>
+                                <td>{{ user.name }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="card">
+            <div class="card-body">
+                <h3>Doctors</h3>
+
+                <div class="alert alert-info" *ngIf="doctors.length === 0">
+                    <p class="mb-0">
+                        There are no doctors with this term
+                    </p>
+                </div>
+
+                <div class="table-responsive" *ngIf="doctors.length > 0">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Avatar</th>
+                                <th>Doctor</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="animated fadeIn fast" *ngFor="let doctor of doctors">
+                                <td>
+                                    <img class="w75" [src]="doctor.image! | image:'doctors'" [alt]="doctor.name">
+                                </td>
+                                <td>
+                                    <a [routerLink]="['/dashboard/doctor', doctor._id]">
+                                        {{ doctor.name }}
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="card">
+            <div class="card-body">
+                <h3>Hospitals</h3>
+
+                <div class="alert alert-info" *ngIf="hospitals.length === 0">
+                    <p class="mb-0">
+                        There are no hospitals with this term
+                    </p>
+                </div>
+
+                <div class="table-responsive" *ngIf="hospitals.length > 0">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Avatar</th>
+                                <th>Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="animated fadeIn fast" *ngFor="let hospital of hospitals">
+                                <td>
+                                    <img class="w75" [src]="hospital.image! | image:'hospitals'" [alt]="hospital.name">
+                                </td>
+                                <td>{{ hospital.name }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
